# RAG_langchain

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: config.py  logging.py  main.py  schemas.py
src/app/rag/: chunker.py  loaders.py  prompts.py  service.py  vectorstore.py
