[project]
name = "langchain-production-rag"
version = "0.1.0"
description = "Production-oriented RAG service built with LangChain, FastAPI, PGVector, and Redis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "langchain>=0.3.0,<0.4.0",
  "langchain-openai>=0.2.0,<0.3.0",
  "langchain-postgres>=0.0.12,<0.1.0",
  "langchain-community>=0.3.0,<0.4.0",
  "langchain-text-splitters>=0.3.0,<0.4.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "redis>=5.0.0,<6.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "structlog>=24.4.0,<25.0.0",
  "httpx>=0.27.0,<1.0.0",
  "orjson>=3.10.0,<4.0.0",
  "pypdf>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
